Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/game.libretro.flycast/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.flycast/resources/language/resource.language.en_gb/strings.po
@@ -61,7 +61,7 @@ msgid "Digital Triggers"
 msgstr ""
 
 msgctxt "#30011"
-msgid "DIV Matching (performance, less accurate)"
+msgid "DIV Matching"
 msgstr ""
 
 msgctxt "#30012"
